--- a/css/style.css
+++ b/css/style.css
@@ -23,12 +23,12 @@ canvas {
   /* background-repeat: repeat; */
   background-color: #222;
   width: 100%;
-  height: 100;
+  height: 100%;
 }
 
 #container {
 max-width: 50em;
-/* height: 70vh; */
+ /* height: 70vh;  */
 background-color: rgb(111, 12, 32);
 margin: 0 auto;
 padding: 1em;
@@ -60,6 +60,8 @@ grid-template-areas: "top-left top-left top-right"
 
 main {
   grid-area: game;
+  height: 250px;
+ 
 }
 
 
